--- a/index.html
+++ b/index.html
@@ -1050,16 +1050,16 @@
                 <div class="menu-item" data-rarity="rare">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Witches Brew" class="menu-card-image">
                     <div class="menu-card-details">
-                        <h4>Sleepy Fishes</h4>
+                        <h4>Elderberry</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 2</span>
                             <span>Value: 12</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">End the turn.</p>
+                        <p class="menu-card-description">End the turn. Next turn, +1 energy.</p>
                     </div>
                     <div class="card-footer">
-                        <div class="card-rarity rarity-rare">Rare / Seafood</div>
+                        <div class="card-rarity rarity-rare">Rare / Fruits and Nuts</div>
                     </div>
                     <div class="flavor-text"></div>
                 </div>
@@ -1235,4 +1235,5 @@
     </script>
 
 </body>
+
 </html>
