--- a/index.html
+++ b/index.html
@@ -717,22 +717,6 @@
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
-            <div class="menu-item" data-rarity="epic">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
-                    <div class="menu-card-details">
-                        <h4>Satyr Chalice</h4>
-                        <div class="menu-card-stats">
-                            <span>Energy: 1</span>
-                            <span>Value: 6</span>
-                            <span>Cook Time: 2</span>
-                        </div>
-                        <p class="menu-card-description"><strong>3x Pack</strong> (one of these secretly turns the dish to dirt when served).</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="card-rarity rarity-epic">Epic / </div>
-                    </div>
-                    <div class="flavor-text">[]</div>
-                </div>
                   <div class="menu-item" data-rarity="epic">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
@@ -1056,7 +1040,7 @@
                             <span>Value: 12</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">End the turn. Next turn, +1 energy.</p>
+                        <p class="menu-card-description">End the turn.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Fruits and Nuts</div>
@@ -1142,6 +1126,22 @@
                     </div>
                     <div class="flavor-text"></div>
                     </div>
+                 <div class="menu-item" data-rarity="epic">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Satyr Chalice</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 1</span>
+                            <span>Value: 6</span>
+                            <span>Cook Time: 2</span>
+                        </div>
+                        <p class="menu-card-description"><strong>3x Pack</strong> (one of these secretly turns the dish to dirt when served).</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-epic">Epic / </div>
+                    </div>
+                    <div class="flavor-text">[]</div>
+                </div>
                 <div class="menu-item" data-rarity="epic">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="The Offer" class="menu-card-image">
                     <div class="menu-card-details">
@@ -1237,3 +1237,4 @@
 </body>
 
 </html>
+
