--- a/index.html
+++ b/index.html
@@ -1174,6 +1174,38 @@
                     </div>
                     <div class="flavor-text"></div>
                 </div>
+                    <div class="menu-item" data-rarity="epic">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="The Offer" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Codfather</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 3</span>
+                            <span>Value: 13</span>
+                            <span>Cook Time: 13</span>
+                        </div>
+                        <p class="menu-card-description">Coming soon!</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-epic">Epic / Meat</div>
+                    </div>
+                    <div class="flavor-text"></div>
+                </div>
+                  <div class="menu-item" data-rarity="epic">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="The Offer" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Portalbello</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 0</span>
+                            <span>Value: 2</span>
+                            <span>Cook Time: 0</span>
+                        </div>
+                        <p class="menu-card-description">Coming soon!</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-epic">Epic / Vegetable</div>
+                    </div>
+                    <div class="flavor-text"></div>
+                </div>
             </div>
         </section>
     </div>
@@ -1237,4 +1269,5 @@
 </body>
 
 </html>
+
 
