--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,23 @@
                             <span>Value: 10</span>
                             <span>Cook Time: 2</span>
                         </div>
-                        <p class="menu-card-description">Give a random customer <strong>Big Mouth</strong>.</p>
+                        <p class="menu-card-description">Give all customers <strong>Big Mouth</strong>.</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-rare">Rare / Meat</div>
+                    </div>
+                    <div class="flavor-text"></div>
+                    </div>
+                   <div class="menu-item" data-rarity="rare">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Witches Brew" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Dopplebangers and Mash</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 2</span>
+                            <span>Value: 7</span>
+                            <span>Cook Time: 1</span>
+                        </div>
+                        <p class="menu-card-description">Copy the value of a ready dish.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
@@ -1199,7 +1215,7 @@
                             <span>Value: 2</span>
                             <span>Cook Time: 0</span>
                         </div>
-                        <p class="menu-card-description">Coming soon!</p>
+                        <p class="menu-card-description">Discard your hand. <strong>Draw 5.</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Vegetable</div>
@@ -1269,5 +1285,6 @@
 </body>
 
 </html>
+
 
 
