--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
-                           <div class="menu-item" data-rarity="rare">
+                           <div class="menu-item" data-rarity="common">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
                         <h4>Hydra Head</h4>
@@ -601,7 +601,7 @@
                         <p class="menu-card-description"><strong>Fireproof.</strong> When burned, gain  <strong>+1 Stack</strong> instead.</p>
                     </div>
                     <div class="card-footer">
-                        <div class="card-rarity rarity-rare">Rare / Meat</div>
+                        <div class="card-rarity rarity-rare">Common / Meat</div>
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
@@ -618,6 +618,22 @@
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Fruit and Nuts</div>
+                    </div>
+                    <div class="flavor-text">[]</div>
+                </div>
+                 <div class="menu-item" data-rarity="rare">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Icarus Crispy Wings</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 1</span>
+                            <span>Value: 0</span>
+                            <span>Cook Time: 0</span>
+                        </div>
+                        <p class="menu-card-description">Value equals to current total<strong>Impatience</strong></p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-rare">Rare / Meat</div>
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
@@ -662,7 +678,7 @@
                             <span>Value: 5</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">Quest: Place this on targeted cooktop (chosen randomly), 3 times. <br>Reward: +5 value, <strong>Popular Demand</strong>.</p>
+                        <p class="menu-card-description">Quest: Place on marked cooktop (chosen randomly), 3 times. <br>Reward: +5 value<br> <strong>Popular Demand</strong>.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
@@ -714,6 +730,23 @@
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Vegetable</div>
+                    </div>
+                    <div class="flavor-text">[]</div>
+                </div>
+                  </div>
+                 <div class="menu-item" data-rarity="epic">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Strix Breast</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 1</span>
+                            <span>Value: 10</span>
+                            <span>Cook Time: 1</span>
+                        </div>
+                        <p class="menu-card-description"><strong>Popular Demand</strong>. When drawn, give a random customer +5 <strong>Impatience.</strong></p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-epic">Epic / Meat</div>
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
@@ -1285,6 +1318,7 @@
 </body>
 
 </html>
+
 
 
 
