--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                         <p class="menu-card-description"><strong>Fireproof.</strong> When burned, gain  <strong>+1 Stack</strong> instead.</p>
                     </div>
                     <div class="card-footer">
-                        <div class="card-rarity rarity-rare">Common / Meat</div>
+                        <div class="card-rarity rarity-common">Common / Meat</div>
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
@@ -678,7 +678,7 @@
                             <span>Value: 5</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">Quest: Place on marked cooktop (chosen randomly), 3 times. <br>Reward: +5 value<br> <strong>Popular Demand</strong>.</p>
+                        <p class="menu-card-description"><strong>Popular Demand</strong>.<br>Quest: Place on marked cooktop (chosen randomly), 3 times. <br>Reward: +5 value </p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
@@ -733,11 +733,10 @@
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
-                  </div>
                  <div class="menu-item" data-rarity="epic">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
-                        <h4>Strix Breast</h4>
+                        <h4>Strix Meat</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 1</span>
                             <span>Value: 10</span>
@@ -1318,6 +1317,7 @@
 </body>
 
 </html>
+
 
 
 
