--- a/index.html
+++ b/index.html
@@ -690,8 +690,8 @@
                     <div class="menu-card-details">
                         <h4>Spicy Cyclops Chop</h4>
                         <div class="menu-card-stats">
-                            <span>Energy: 1</span>
-                            <span>Value: 4</span>
+                            <span>Energy: 2</span>
+                            <span>Value: 8</span>
                             <span>Cook Time: 1</span>
                         </div>
                         <p class="menu-card-description">If your deck has no other Spicy ingredients, gain +6 Spicy.</p>
@@ -706,14 +706,30 @@
                     <div class="menu-card-details">
                         <h4>Chilled Cyclops Chop</h4>
                         <div class="menu-card-stats">
-                            <span>Energy: 1</span>
-                            <span>Value: 4</span>
+                            <span>Energy: 2</span>
+                            <span>Value: 8</span>
                             <span>Cook Time: 1</span>
                         </div>
                         <p class="menu-card-description">If your deck has no other Chilled ingredients, gain +6 Chilled.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Meat</div>
+                    </div>
+                    <div class="flavor-text">[]</div>
+                </div>
+                   <div class="menu-item" data-rarity="epic">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Zingy Cyclops Chop</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 2</span>
+                            <span>Value: 8</span>
+                            <span>Cook Time: 1</span>
+                        </div>
+                        <p class="menu-card-description">If your deck has no other Zingy ingredient, gain 3 Zingy.</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-epic">Epic / Meat </div>
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
@@ -742,7 +758,7 @@
                             <span>Value: 10</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description"><strong>Popular Demand</strong>. When drawn, give a random customer +5 <strong>Impatience.</strong></p>
+                        <p class="menu-card-description"><strong>Popular Demand</strong>. <br>When drawn, give a random customer +5 <strong>Impatience.</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Meat</div>
@@ -758,7 +774,7 @@
                             <span>Value: 4</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">When the doors close, gain <strong>Tempt All 1</strong> and <strong>Popular Demand</strong>. (Tempt to speed up by 1 turn).</p>
+                        <p class="menu-card-description">When the doors close, gain <strong>Tempt All 1</strong> and <strong>Popular Demand</strong>. <br>(Tempt to speed up by 1 turn).</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / </div>
@@ -1317,6 +1333,7 @@
 </body>
 
 </html>
+
 
 
 
