--- a/index.html
+++ b/index.html
@@ -640,13 +640,13 @@
                   <div class="menu-item" data-rarity="rare">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
-                        <h4>Deli Titan</h4>
+                        <h4>Deli Titan Wrap</h4>
                         <div class="menu-card-stats">
-                            <span>Energy: 2</span>
-                            <span>Value: 0</span>
-                            <span>Cook Time: 0</span>
+                            <span>Energy: 20</span>
+                            <span>Value: 8</span>
+                            <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">Value equals half the current max <strong>Hunger.</strong></p>
+                        <p class="menu-card-description">Costs (1) less for each satisfied Hunger today.</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
@@ -656,7 +656,7 @@
                   <div class="menu-item" data-rarity="rare">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
-                        <h4>Skewered Harpy</h4>
+                        <h4>Strix Skewer</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 1</span>
                             <span>Value: 4</span>
@@ -752,7 +752,7 @@
                  <div class="menu-item" data-rarity="epic">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
-                        <h4>Strix Meat</h4>
+                        <h4>Raging Harpy BBQ</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 1</span>
                             <span>Value: 10</span>
@@ -1333,6 +1333,7 @@
 </body>
 
 </html>
+
 
 
 
