--- a/index.html
+++ b/index.html
@@ -675,10 +675,10 @@
                         <h4>Minotaur Steak</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 1</span>
-                            <span>Value: 5</span>
+                            <span>Value: 4</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description"><strong>Popular Demand</strong>.<br>Quest: Place on marked cooktop (chosen randomly), 3 times. <br>Reward: +5 value </p>
+                        <p class="menu-card-description"><strong>Popular Demand</strong>.<br>If this has been played on all 3 cooktops, gain +4 value.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
@@ -1333,6 +1333,7 @@
 </body>
 
 </html>
+
 
 
 
