--- a/index.html
+++ b/index.html
@@ -456,6 +456,9 @@
             <div class="mechanic">
                 <h3>POPULAR DEMAND</h3>
                 <p>Returns to your hand next turn</p>
+
+                 <h3>PERMA STACK</h3>
+                <p>Leaves a copy on the cooktop when served. Lasts all day.</p>
             </div>
         </section>
 
@@ -678,7 +681,7 @@
                             <span>Value: 4</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description"><strong>Popular Demand</strong>.<br>If this has been played on all 3 cooktops, gain +4 value.</p>
+                        <p class="menu-card-description"><strong>Popular Demand</strong>.<br>Once this has been played on all 3 cooktops, gain +4 value.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
@@ -752,7 +755,7 @@
                  <div class="menu-item" data-rarity="epic">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
-                        <h4>Raging Harpy BBQ</h4>
+                        <h4>Raging Harpy Skewers</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 1</span>
                             <span>Value: 10</span>
@@ -774,7 +777,7 @@
                             <span>Value: 4</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">When the doors close, gain <strong>Tempt All 1</strong> and <strong>Popular Demand</strong>. <br>(Tempt to speed up by 1 turn).</p>
+                        <p class="menu-card-description">When the doors close, <br>gain <strong>Tempt All 1</strong> and <strong>Popular Demand</strong>. <br>(Tempt to speed up by 1 turn).</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / </div>
@@ -806,7 +809,7 @@
                             <span>Value: 9</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">When served, leave behind a new <strong>Pack</strong>. Lasts all day.</p>
+                        <p class="menu-card-description"> <strong>Perma Stack</strong>.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Meat </div>
@@ -1333,6 +1336,7 @@
 </body>
 
 </html>
+
 
 
 
