--- a/index.html
+++ b/index.html
@@ -457,8 +457,6 @@
                 <h3>POPULAR DEMAND</h3>
                 <p>Returns to your hand next turn</p>
 
-                 <h3>PERMA STACK</h3>
-                <p>Leaves a copy on the cooktop when served. Lasts all day.</p>
             </div>
         </section>
 
@@ -569,7 +567,7 @@
                             <span>Value: 15</span>
                             <span>Cook Time: 2</span>
                         </div>
-                        <p class="menu-card-description"><strong>Heavy.</strong> If there's a customer with 20 or more Hunger, gain +10 value.</p>
+                        <p class="menu-card-description"><strong>Heavy.</strong> If there's a customer with 30 or more <strong>Hunger</strong>, gain +10 value.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-common">Common / Vegetable</div>
@@ -633,7 +631,7 @@
                             <span>Value: 0</span>
                             <span>Cook Time: 0</span>
                         </div>
-                        <p class="menu-card-description">Value equals to current total<strong>Impatience</strong></p>
+                        <p class="menu-card-description">Value equals to current total <strong>Impatience</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
@@ -646,13 +644,29 @@
                         <h4>Deli Titan Wrap</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 20</span>
-                            <span>Value: 8</span>
+                            <span>Value: 10</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">Costs (1) less for each satisfied Hunger today.</strong></p>
+                        <p class="menu-card-description">Costs (1) less for each satisfied <strong>Hunger</strong> today.</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
+                    </div>
+                    <div class="flavor-text">[]</div>
+                </div>
+                  <div class="menu-item" data-rarity="rare">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Charybdis Cinnamon Swirlpool</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 1</span>
+                            <span>Value: 10</span>
+                            <span>Cook Time: 1</span>
+                        </div>
+                        <p class="menu-card-description"><strong>Popular Demand</strong>. <br>When drawn, give a random ingredient +5 <strong>Ethereal.</strong></p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-rare">Epic / Rare</div>
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
@@ -777,7 +791,7 @@
                             <span>Value: 4</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">When the doors close, <br>gain <strong>Tempt All 1</strong> and <strong>Popular Demand</strong>. <br>(Tempt to speed up by 1 turn).</p>
+                        <p class="menu-card-description">When the doors close, <br>gain <strong>Tempt All 1</strong> and <br><strong>Popular Demand</strong>. <br>(Tempt to speed up by 1 turn).</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / </div>
@@ -787,7 +801,7 @@
                   <div class="menu-item" data-rarity="epic">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
-                        <h4>Herculeek</h4>
+                        <h4>Hamcules</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 1</span>
                             <span>Value: 3</span>
@@ -796,7 +810,7 @@
                         <p class="menu-card-description">If you've satisfied 20 Hunger today, gain <strong>6x Pack</strong>!</p>
                     </div>
                     <div class="card-footer">
-                        <div class="card-rarity rarity-epic">Epic / Vegetable </div>
+                        <div class="card-rarity rarity-epic">Epic / Meat </div>
                     </div>
                     <div class="flavor-text">[]</div>
                 </div>
@@ -809,7 +823,7 @@
                             <span>Value: 9</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description"> <strong>Perma Stack</strong>.</p>
+                        <p class="menu-card-description"> <strong>Perma Stack</strong>.<br>(when served, leave a new Stack)</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Meat </div>
@@ -882,7 +896,7 @@
                             <span>Value: 3</span>
                             <span>Cook Time: 0</span>
                         </div>
-                        <p class="menu-card-description"><strong>Silence Hand.</strong></p>
+                        <p class="menu-card-description"><strong>Garnish. Silence Hand.</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-common">Common / Vegetable</div>
@@ -1101,6 +1115,38 @@
                   <div class="menu-item" data-rarity="rare">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Witches Brew" class="menu-card-image">
                     <div class="menu-card-details">
+                        <h4>Hitman Ham</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 1</span>
+                            <span>Value: 8</span>
+                            <span>Cook Time: 1</span>
+                        </div>
+                        <p class="menu-card-description">Give adjacent dishes -2 value. </p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-rare">Rare / Meat</div>
+                    </div>
+                    <div class="flavor-text"></div>
+                </div>
+                   <div class="menu-item" data-rarity="rare">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Witches Brew" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Hagfish</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 1</span>
+                            <span>Value: 8</span>
+                            <span>Cook Time: 1</span>
+                        </div>
+                        <p class="menu-card-description">-1 energy next turn.</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-rare">Rare / Seafood</div>
+                    </div>
+                    <div class="flavor-text"></div>
+                </div>
+                  <div class="menu-item" data-rarity="rare">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Witches Brew" class="menu-card-image">
+                    <div class="menu-card-details">
                         <h4>Family Secret</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 2</span>
@@ -1152,10 +1198,10 @@
                         <h4>The Doner</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 2</span>
-                            <span>Value: 15</span>
+                            <span>Value: 14</span>
                             <span>Cook Time: 2</span>
                         </div>
-                        <p class="menu-card-description"><strong>Impress All 2. Silence Hand.</strong><br>Can only be played on the middle cooktop.</p>
+                        <p class="menu-card-description"><strong>Impress All 2. Silence Hand.</strong><br>Give adjacent dishes +2 value.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
@@ -1177,7 +1223,7 @@
                     </div>
                     <div class="flavor-text"></div>
                     </div>
-                   <div class="menu-item" data-rarity="rare">
+                   <div class="menu-item" data-rarity="epic">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Witches Brew" class="menu-card-image">
                     <div class="menu-card-details">
                         <h4>Dopplebangers and Mash</h4>
@@ -1189,10 +1235,26 @@
                         <p class="menu-card-description">Copy the value of a ready dish.</p>
                     </div>
                     <div class="card-footer">
-                        <div class="card-rarity rarity-rare">Rare / Meat</div>
+                        <div class="card-rarity rarity-epic">Epic / Meat, Starch</div>
                     </div>
                     <div class="flavor-text"></div>
                     </div>
+                   <div class="menu-item" data-rarity="epic">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="The Offer" class="menu-card-image">
+                    <div class="menu-card-details">
+                        <h4>Portalbello</h4>
+                        <div class="menu-card-stats">
+                            <span>Energy: 0</span>
+                            <span>Value: 2</span>
+                            <span>Cook Time: 0</span>
+                        </div>
+                        <p class="menu-card-description">Discard your hand. <strong>Draw 5.</strong></p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-rarity rarity-epic">Epic / Vegetable</div>
+                    </div>
+                    <div class="flavor-text"></div>
+                </div>
                  <div class="menu-item" data-rarity="epic">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
@@ -1225,54 +1287,23 @@
                     </div>
                     <div class="flavor-text"></div>
                 </div>
-                 <div class="menu-item" data-rarity="epic">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="The Offer" class="menu-card-image">
-                    <div class="menu-card-details">
-                        <h4>Spaghetti Monster</h4>
-                        <div class="menu-card-stats">
-                            <span>Energy: 3</span>
-                            <span>Value: 13</span>
-                            <span>Cook Time: 13</span>
-                        </div>
-                        <p class="menu-card-description">Randomly jumble <strong>EVERY</strong> number in the restaurant.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="card-rarity rarity-epic">Epic / Meat</div>
-                    </div>
-                    <div class="flavor-text"></div>
-                </div>
-                    <div class="menu-item" data-rarity="epic">
+                <div class="menu-item" data-rarity="epic">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="The Offer" class="menu-card-image">
                     <div class="menu-card-details">
                         <h4>Codfather</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 3</span>
-                            <span>Value: 13</span>
-                            <span>Cook Time: 13</span>
+                            <span>Value: 10</span>
+                            <span>Cook Time: 0</span>
                         </div>
-                        <p class="menu-card-description">Coming soon!</p>
+                        <p class="menu-card-description">3 Zingy. <br>Ignores customer abilities. <br>Customers can't refuse.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Meat</div>
                     </div>
                     <div class="flavor-text"></div>
                 </div>
-                  <div class="menu-item" data-rarity="epic">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="The Offer" class="menu-card-image">
-                    <div class="menu-card-details">
-                        <h4>Portalbello</h4>
-                        <div class="menu-card-stats">
-                            <span>Energy: 0</span>
-                            <span>Value: 2</span>
-                            <span>Cook Time: 0</span>
-                        </div>
-                        <p class="menu-card-description">Discard your hand. <strong>Draw 5.</strong></p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="card-rarity rarity-epic">Epic / Vegetable</div>
-                    </div>
-                    <div class="flavor-text"></div>
-                </div>
+               
             </div>
         </section>
     </div>
@@ -1336,6 +1367,7 @@
 </body>
 
 </html>
+
 
 
 
