--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                             <span>Value: 6</span>
                             <span>Cook Time: 0</span>
                         </div>
-                        <p class="menu-card-description"><strong>Popular Demand</strong>. When drawn, give a random ingredient <strong>Ethereal</strong> this turn.</p>
+                        <p class="menu-card-description"><strong>Popular Demand. Ethereal.</strong>.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-common">Common / Vegetable</div>
@@ -657,7 +657,7 @@
                   <div class="menu-item" data-rarity="rare">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Nemean Lion" class="menu-card-image">
                     <div class="menu-card-details">
-                        <h4>Charybdis Cinnamon Swirlpool</h4>
+                        <h4>Cinnamon Swirlpool</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 1</span>
                             <span>Value: 10</span>
@@ -823,7 +823,7 @@
                             <span>Value: 9</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description"> <strong>Perma Stack</strong>.<br>(when served, leave a new Stack)</p>
+                        <p class="menu-card-description"> <strong>Perma Stack</strong>.<br></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Meat </div>
@@ -1099,7 +1099,7 @@
                 <div class="menu-item" data-rarity="rare">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Witches Brew" class="menu-card-image">
                     <div class="menu-card-details">
-                        <h4>Sleep With The Fried Fishes</h4>
+                        <h4>Hagfish</h4>
                         <div class="menu-card-stats">
                             <span>Energy: 2</span>
                             <span>Value: 12</span>
@@ -1125,22 +1125,6 @@
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Rare / Meat</div>
-                    </div>
-                    <div class="flavor-text"></div>
-                </div>
-                   <div class="menu-item" data-rarity="rare">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 225'%3E%3Crect fill='%232b2b30' width='400' height='225'/%3E%3C/svg%3E" alt="Witches Brew" class="menu-card-image">
-                    <div class="menu-card-details">
-                        <h4>Hagfish</h4>
-                        <div class="menu-card-stats">
-                            <span>Energy: 1</span>
-                            <span>Value: 8</span>
-                            <span>Cook Time: 1</span>
-                        </div>
-                        <p class="menu-card-description">-1 energy next turn.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="card-rarity rarity-rare">Rare / Seafood</div>
                     </div>
                     <div class="flavor-text"></div>
                 </div>
@@ -1244,11 +1228,11 @@
                     <div class="menu-card-details">
                         <h4>Portalbello</h4>
                         <div class="menu-card-stats">
-                            <span>Energy: 0</span>
+                            <span>Energy: 3</span>
                             <span>Value: 2</span>
                             <span>Cook Time: 0</span>
                         </div>
-                        <p class="menu-card-description">Discard your hand. <strong>Draw 5.</strong></p>
+                        <p class="menu-card-description">Give dishes on the right get +8 value.<br>Give dishes on the left -1 cooktime.</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Vegetable</div>
@@ -1367,6 +1351,7 @@
 </body>
 
 </html>
+
 
 
 
